# course-work-1-apis-research

./: README.md
docs/: 0-introduction.md  1-what-is-api.md  2-what-is-rest-api.md  3-what-is-grpc-api.md  4-what-is-graphql-api.md  5-conclusion.md
src/: README.md  example_json_server.py
src/booksapi-core/: pyproject.toml
src/booksapi-core/booksapi_core/: actions.py  appcore.py  books.db  database.py  models.py
src/booksapi-grpc/: pyproject.toml
src/booksapi-grpc/booksapi_grpc/: main.py  requests_pb2.py  requests_pb2.pyi  responses_pb2.py  responses_pb2.pyi  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
src/booksapi-grpc/booksapi_grpc/protos/: requests.proto  responses.proto  service.proto
src/booksapi-rest/: pyproject.toml
src/booksapi-rest/booksapi_rest/: handlers.py  requests.py  responses.py
