[tool.poetry]
name = "booksapi-rest"
version = "0.1.0"
description = ""
authors = ["Varvara <116665835+varvara007@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "booksapi_rest"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
